--- a/index.html
+++ b/index.html
@@ -41,14 +41,8 @@
       .navbar-collapse .dropdown-item { width: 100%; }
     }
 
-    /* Brand responsiveness */
+    /* Brand image sizing */
     .navbar-brand img { max-height: 48px; width: auto; }
-    .brand-abbrev { display:inline; }
-    .brand-full { display:none; }
-    @media (min-width: 768px) {
-      .brand-abbrev { display:none; }
-      .brand-full { display:inline; }
-    }
 
     /* Carousel image fit */
     .carousel-item img { object-fit: cover; width:100%; max-height: 70vh; }
@@ -68,6 +62,7 @@
       align-items: center;
       justify-content: center;
       padding: 0;
+      color: #000; /* make sure bars are dark on yellow */
     }
     .toggler-icon {
       display: inline-block;
@@ -103,15 +98,11 @@
 </head>
 
 <body>
-  <!-- Combined navbar: brand + toggler + nav items + search -->
-  <nav class="navbar navbar-expand-lg navbar-light bg-body-tertiary" aria-label="Main navigation">
+  <!-- Combined navbar: logo only; yellow background -->
+  <nav class="navbar navbar-expand-lg navbar-light bg-warning" aria-label="Main navigation">
     <div class="container-fluid">
       <a class="navbar-brand d-flex align-items-center" href="#">
         <img src="FrontEnd/images/official_logo.jpg" alt="Kigumo logo" class="img-fluid" />
-        <span class="ms-2">
-          <span class="brand-abbrev">Kigumo TVC</span>
-          <span class="brand-full">Kigumo Technical And Vocational College</span>
-        </span>
       </a>
 
       <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#mainNavCollapse"
@@ -135,7 +126,6 @@
               <li><hr class="dropdown-divider"></li>
 
               <li class="dropdown-submenu">
-                <!-- This toggle will be handled by JS on mobile; keep data-bs-toggle for accessibility -->
                 <a class="dropdown-item dropdown-toggle" href="#" aria-expanded="false">Administration</a>
                 <ul class="dropdown-menu">
                   <li><a class="dropdown-item" href="#">Board of Management</a></li>
