--- a/index.html
+++ b/index.html
@@ -100,20 +100,52 @@
     </div>
   </nav>
 
-  <!-- carousel (unchanged) -->
+  <!-- carousel with overlay text -->
   <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
     <div class="carousel-inner">
       <div class="carousel-item active">
         <img src="FrontEnd/images/school1.jpg" class="d-block w-100" alt="">
+        <div class="carousel-overlay">
+          <div class="carousel-caption">
+            <p class="carousel-tag">#Kigumo Tvc</p>
+            <h1 class="carousel-title">Apply for September 2025 Intake</h1>
+            <p class="carousel-subtitle">Secure Your Spot At Kigumo TVC Today. Join A Thriving Community Of Learners.</p>
+            <a href="#" class="carousel-btn">Our Programmes →</a>
+          </div>
+        </div>
       </div>
       <div class="carousel-item">
         <img src="FrontEnd/images/adm1.jpg" class="d-block w-100" alt="">
+        <div class="carousel-overlay">
+          <div class="carousel-caption">
+            <p class="carousel-tag">#Kigumo Tvc</p>
+            <h1 class="carousel-title">Apply for September 2025 Intake</h1>
+            <p class="carousel-subtitle">Secure Your Spot At Kigumo TVC Today. Join A Thriving Community Of Learners.</p>
+            <a href="#" class="carousel-btn">Our Programmes →</a>
+          </div>
+        </div>
       </div>
       <div class="carousel-item">
         <img src="FrontEnd/images/tra1.jpg" class="d-block w-100" alt="">
+        <div class="carousel-overlay">
+          <div class="carousel-caption">
+            <p class="carousel-tag">Kigumo Technical And Vocational College</p>
+            <h1 class="carousel-title">Apply for September 2025 Intake</h1>
+            <p class="carousel-subtitle">Secure Your Spot At Kigumo TVC Today. Join A Thriving Community Of Learners.</p>
+            <a href="#" class="carousel-btn">Our Programmes →</a>
+          </div>
+        </div>
       </div>
       <div class="carousel-item">
         <img src="FrontEnd/images/tree planting 1.jpg" class="d-block w-100" alt="">
+        <div class="carousel-overlay">
+          <div class="carousel-caption">
+            <p class="carousel-tag">#Kigumo Tvc</p>
+            <h1 class="carousel-title">Apply for September 2025 Intake</h1>
+            <p class="carousel-subtitle">Secure Your Spot At Kigumo TVC Today. Join A Thriving Community Of Learners.</p>
+            <a href="#" class="carousel-btn">Our Programmes →</a>
+          </div>
+        </div>
       </div>
     </div>
     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
