--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
     <div class="container-fluid">
       <a class="navbar-brand" href="#">
         <img src="FrontEnd/images/official_logo.jpg" alt="Kigumo logo" class="img-fluid" />
+        <span class="college-name">Kigumo Technical And Vocational College</span>
       </a>
+
+      b
 
       <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#mainNavCollapse"
         aria-controls="mainNavCollapse" aria-expanded="false" aria-label="Toggle navigation">
@@ -107,7 +110,7 @@
         <img src="FrontEnd/images/school1.jpg" class="d-block w-100" alt="">
         <div class="carousel-overlay">
           <div class="carousel-caption">
-            <p class="carousel-tag">#Kigumo Tvc</p>
+            <p class="carousel-tag">Kigumo Technical And Vocational College</p>
             <h1 class="carousel-title">Apply for September 2025 Intake</h1>
             <p class="carousel-subtitle">Secure Your Spot At Kigumo TVC Today. Join A Thriving Community Of Learners.</p>
             <a href="#" class="carousel-btn">Our Programmes →</a>
@@ -118,7 +121,7 @@
         <img src="FrontEnd/images/adm1.jpg" class="d-block w-100" alt="">
         <div class="carousel-overlay">
           <div class="carousel-caption">
-            <p class="carousel-tag">#Kigumo Tvc</p>
+            <p class="carousel-tag">Kigumo Technical And Vocational College</p>
             <h1 class="carousel-title">Apply for September 2025 Intake</h1>
             <p class="carousel-subtitle">Secure Your Spot At Kigumo TVC Today. Join A Thriving Community Of Learners.</p>
             <a href="#" class="carousel-btn">Our Programmes →</a>
@@ -140,7 +143,7 @@
         <img src="FrontEnd/images/tree planting 1.jpg" class="d-block w-100" alt="">
         <div class="carousel-overlay">
           <div class="carousel-caption">
-            <p class="carousel-tag">#Kigumo Tvc</p>
+            <p class="carousel-tag">Kigumo Technical And Vocational College</p>
             <h1 class="carousel-title">Apply for September 2025 Intake</h1>
             <p class="carousel-subtitle">Secure Your Spot At Kigumo TVC Today. Join A Thriving Community Of Learners.</p>
             <a href="#" class="carousel-btn">Our Programmes →</a>
