--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="container-fluid">
       <a class="navbar-brand" href="#">
         <img src="FrontEnd/images/official_logo.jpg" alt="Kigumo logo" class="img-fluid" />
-        <span class="college-name">Kigumo Technical And Vocational College</span>
+        <!-- <span class="college-name">Kigumo Technical And Vocational College</span> -->
       </a>
 
       <br>
