--- a/index.html
+++ b/index.html
@@ -112,8 +112,8 @@
         <img src="FrontEnd/images/school1.jpg" class="d-block w-100" alt="">
         <div class="carousel-overlay">
           <div class="carousel-caption">
-            <p class="carousel-tag">Kigumo Technical And Vocational College</p>
-            <h1 class="carousel-title">Apply for September 2025 Intake</h1>
+            <p class="carousel-tag">Kigumo Technical And <span class="tag-highlight">Vocational College</span></p>
+            <h1 class="carousel-title">Apply for January 2026 Intake</h1>
             <p class="carousel-subtitle">Secure Your Spot At Kigumo TVC Today. Join A Thriving Community Of Learners.</p>
             <a href="#" class="carousel-btn">Our Programmes →</a>
           </div>
@@ -123,8 +123,8 @@
         <img src="FrontEnd/images/adm1.jpg" class="d-block w-100" alt="">
         <div class="carousel-overlay">
           <div class="carousel-caption">
-            <p class="carousel-tag">Kigumo Technical And Vocational College</p>
-            <h1 class="carousel-title">Apply for September 2025 Intake</h1>
+            <p class="carousel-tag">Kigumo Technical And <span class="tag-highlight">Vocational College</span></p>
+            <h1 class="carousel-title">Apply for January 2026 Intake</h1>
             <p class="carousel-subtitle">Secure Your Spot At Kigumo TVC Today. Join A Thriving Community Of Learners.</p>
             <a href="#" class="carousel-btn">Our Programmes →</a>
           </div>
@@ -134,8 +134,8 @@
         <img src="FrontEnd/images/tra1.jpg" class="d-block w-100" alt="">
         <div class="carousel-overlay">
           <div class="carousel-caption">
-            <p class="carousel-tag">Kigumo Technical And Vocational College</p>
-            <h1 class="carousel-title">Apply for September 2025 Intake</h1>
+            <p class="carousel-tag">Kigumo Technical And <span class="tag-highlight">Vocational College</span></p>
+            <h1 class="carousel-title">Apply for January 2026 Intake</h1>
             <p class="carousel-subtitle">Secure Your Spot At Kigumo TVC Today. Join A Thriving Community Of Learners.</p>
             <a href="#" class="carousel-btn">Our Programmes →</a>
           </div>
@@ -145,8 +145,8 @@
         <img src="FrontEnd/images/tree planting 1.jpg" class="d-block w-100" alt="">
         <div class="carousel-overlay">
           <div class="carousel-caption">
-            <p class="carousel-tag">Kigumo Technical And Vocational College</p>
-            <h1 class="carousel-title">Apply for September 2025 Intake</h1>
+            <p class="carousel-tag">Kigumo Technical And <span class="tag-highlight">Vocational College</span></p>
+            <h1 class="carousel-title">Apply for January 2026 Intake</h1>
             <p class="carousel-subtitle">Secure Your Spot At Kigumo TVC Today. Join A Thriving Community Of Learners.</p>
             <a href="#" class="carousel-btn">Our Programmes →</a>
           </div>
