--- a/index.html
+++ b/index.html
@@ -94,6 +94,8 @@
 
           <li class="nav-item"><a class="nav-link" href="#">Courses</a></li>
           <li class="nav-item"><a class="nav-link" href="#">News &amp; Events</a></li>
+          <li class="nav-item"><a class="nav-link" href="#">Careers</a></li>
+          <li class="nav-item"><a class="nav-link" href="#">School Portals</a></li>
           <li class="nav-item"><a class="nav-link" href="#">Contact us</a></li>
         </ul>
 
@@ -112,7 +114,7 @@
         <img src="FrontEnd/images/school1.jpg" class="d-block w-100" alt="">
         <div class="carousel-overlay">
           <div class="carousel-caption">
-            <p class="carousel-tag">Kigumo Technical And <span class="tag-highlight">Vocational College</span></p>
+            <p class="carousel-tag"><span class="tag-green">Kigumo Technical And</span> <span class="tag-highlight">Vocational College</span></p>
             <h1 class="carousel-title">Apply for January 2026 Intake</h1>
             <p class="carousel-subtitle">Secure Your Spot At Kigumo TVC Today. Join A Thriving Community Of Learners.</p>
             <a href="#" class="carousel-btn">Our Programmes →</a>
@@ -123,7 +125,7 @@
         <img src="FrontEnd/images/adm1.jpg" class="d-block w-100" alt="">
         <div class="carousel-overlay">
           <div class="carousel-caption">
-            <p class="carousel-tag">Kigumo Technical And <span class="tag-highlight">Vocational College</span></p>
+            <p class="carousel-tag"><span class="tag-green">Kigumo Technical And</span> <span class="tag-highlight">Vocational College</span></p>
             <h1 class="carousel-title">Apply for January 2026 Intake</h1>
             <p class="carousel-subtitle">Secure Your Spot At Kigumo TVC Today. Join A Thriving Community Of Learners.</p>
             <a href="#" class="carousel-btn">Our Programmes →</a>
@@ -134,7 +136,7 @@
         <img src="FrontEnd/images/tra1.jpg" class="d-block w-100" alt="">
         <div class="carousel-overlay">
           <div class="carousel-caption">
-            <p class="carousel-tag">Kigumo Technical And <span class="tag-highlight">Vocational College</span></p>
+            <p class="carousel-tag"><span class="tag-green">Kigumo Technical And</span> <span class="tag-highlight">Vocational College</span></p>
             <h1 class="carousel-title">Apply for January 2026 Intake</h1>
             <p class="carousel-subtitle">Secure Your Spot At Kigumo TVC Today. Join A Thriving Community Of Learners.</p>
             <a href="#" class="carousel-btn">Our Programmes →</a>
@@ -145,7 +147,7 @@
         <img src="FrontEnd/images/tree planting 1.jpg" class="d-block w-100" alt="">
         <div class="carousel-overlay">
           <div class="carousel-caption">
-            <p class="carousel-tag">Kigumo Technical And <span class="tag-highlight">Vocational College</span></p>
+            <p class="carousel-tag"><span class="tag-green">Kigumo Technical And</span> <span class="tag-highlight">Vocational College</span></p>
             <h1 class="carousel-title">Apply for January 2026 Intake</h1>
             <p class="carousel-subtitle">Secure Your Spot At Kigumo TVC Today. Join A Thriving Community Of Learners.</p>
             <a href="#" class="carousel-btn">Our Programmes →</a>
