--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
           <li class="nav-item"><a class="nav-link" href="#">News &amp; Events</a></li>
           <li class="nav-item"><a class="nav-link" href="#">Careers</a></li>
           <li class="nav-item"><a class="nav-link" href="#">School Portals</a></li>
+          <li class="nav-item"><a class="nav-link" href="#">Downloads</a></li>
           <li class="nav-item"><a class="nav-link" href="#">Contact us</a></li>
         </ul>
 
