--- a/index.html
+++ b/index.html
@@ -220,6 +220,20 @@
           </div>
         </div>
       </div>
+
+      <!-- Map Location -->
+      <div class="row mt-4">
+        <div class="col-12">
+          <div class="card shadow-sm">
+            <div class="card-body">
+              <h5 class="card-title mb-3">Our Location</h5>
+              <div class="ratio ratio-16x9">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d31609.387103673667!2d37.043413257088176!3d-0.834267664951953!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1828b957a6d873a1%3A0x1a75fb6109124f76!2sKigumo%20Technical%20and%20Professional%20College!5e0!3m2!1sen!2ske!4v1768053954674!5m2!1sen!2ske" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </section>
 
