Reorganize contact layout: form left, contacts and map right

--- a/index.html
+++ b/index.html
@@ -177,23 +177,8 @@
       </div>
 
       <div class="row g-4">
-        <!-- Contact Details -->
-        <div class="col-md-5">
-          <div class="card h-100 shadow-sm">
-            <div class="card-body">
-              <h5 class="card-title">College Contacts</h5>
-              <ul class="list-unstyled contact-list mt-3">
-                <li class="mb-2"><span class="fw-semibold">Phone:</span> <a href="tel:+254700000000">+254 700 000 000</a></li>
-                <li class="mb-2"><span class="fw-semibold">Email:</span> <a href="mailto:info@example.com">info@example.com</a></li>
-                <li class="mb-2"><span class="fw-semibold">Address:</span> Kigumo, Murang'a County, Kenya</li>
-                <li class="mb-2"><span class="fw-semibold">Office Hours:</span> Mon–Fri, 8:00–17:00 (EAT)</li>
-              </ul>
-            </div>
-          </div>
-        </div>
-
-        <!-- Contact Form -->
-        <div class="col-md-7">
+        <!-- Contact Form (Left Side) -->
+        <div class="col-md-8">
           <div class="card h-100 shadow-sm">
             <div class="card-body">
               <h5 class="card-title">Send Us a Message</h5>
@@ -219,11 +204,23 @@
             </div>
           </div>
         </div>
-      </div>
 
-      <!-- Map Location -->
-      <div class="row mt-4">
-        <div class="col-12">
+        <!-- Right Column: Contact Details + Map -->
+        <div class="col-md-4">
+          <!-- Contact Details -->
+          <div class="card shadow-sm mb-4">
+            <div class="card-body">
+              <h5 class="card-title">College Contacts</h5>
+              <ul class="list-unstyled contact-list mt-3">
+                <li class="mb-2"><span class="fw-semibold">Phone:</span> <a href="tel:+254700000000">+254 700 000 000</a></li>
+                <li class="mb-2"><span class="fw-semibold">Email:</span> <a href="mailto:info@example.com">info@example.com</a></li>
+                <li class="mb-2"><span class="fw-semibold">Address:</span> Kigumo, Murang'a County, Kenya</li>
+                <li class="mb-2"><span class="fw-semibold">Office Hours:</span> Mon–Fri, 8:00–17:00 (EAT)</li>
+              </ul>
+            </div>
+          </div>
+
+          <!-- Map Location -->
           <div class="card shadow-sm">
             <div class="card-body">
               <h5 class="card-title mb-3">Our Location</h5>
