--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
           <li class="nav-item"><a class="nav-link" href="#">Careers</a></li>
           <li class="nav-item"><a class="nav-link" href="#">School Portals</a></li>
           <li class="nav-item"><a class="nav-link" href="#">Downloads</a></li>
-          <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">Contact us</a></li>
+          <li class="nav-item"><a class="nav-link" href="#contact">Students</a></li>
+          <li class="nav-item"><a class="nav-link" href="#contact">Contact us</a></li>
         </ul>
 
         <form class="d-flex ms-auto ms-lg-0" role="search">
