--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
               <h5 class="card-title">College Contacts</h5>
               <ul class="list-unstyled contact-list mt-3">
                 <li class="mb-2"><span class="fw-semibold">Phone:</span> <a href="tel:+254700000000">+254 700 000 000</a></li>
-                <li class="mb-2"><span class="fw-semibold">Email:</span> <a href="mailto:info@example.com">info@example.com</a></li>
+                <li class="mb-2"><span class="fw-semibold">Email:</span> <a href="mailto:info@kigumotvc.ac.ke">info@example.com</a></li>
                 <li class="mb-2"><span class="fw-semibold">Address:</span> Kigumo, Murang'a County, Kenya</li>
                 <li class="mb-2"><span class="fw-semibold">Office Hours:</span> Mon–Fri, 8:00–17:00 (EAT)</li>
               </ul>
