--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
           <li class="nav-item"><a class="nav-link" href="#">Careers</a></li>
           <li class="nav-item"><a class="nav-link" href="#">School Portals</a></li>
           <li class="nav-item"><a class="nav-link" href="#">Downloads</a></li>
-          <li class="nav-item"><a class="nav-link" href="#contact">Students</a></li>
-          <li class="nav-item"><a class="nav-link" href="#contact">Contact us</a></li>
+          <li class="nav-item"><a class="nav-link" href="#">Students</a></li>
+          <li class="nav-item"><a class="nav-link" href="FrontEnd/html/contact.html">Contact us</a></li>
         </ul>
 
         <form class="d-flex ms-auto ms-lg-0" role="search">
@@ -167,73 +167,7 @@
     crossorigin="anonymous"></script>
   <script type="module" src="FrontEnd/js/main.js"></script>
  
-  <!-- Contact Section -->
-  <section id="contact" class="contact-section py-5 bg-light">
-    <div class="container">
-      <div class="row mb-4">
-        <div class="col-12 text-center">
-          <h2 class="fw-bold">Contact Us</h2>
-          <p class="text-muted">Reach out for admissions, courses, or general support.</p>
-        </div>
-      </div>
-
-      <div class="row g-4">
-        <!-- Contact Form (Left Side) -->
-        <div class="col-md-8">
-          <div class="card h-100 shadow-sm">
-            <div class="card-body">
-              <h5 class="card-title">Send Us a Message</h5>
-              <form id="contactForm" class="mt-3" novalidate>
-                <div class="mb-3">
-                  <label for="name" class="form-label">Full Name</label>
-                  <input type="text" class="form-control" id="name" name="name" required placeholder="Enter your name" />
-                  <div class="invalid-feedback">Please enter your name.</div>
-                </div>
-                <div class="mb-3">
-                  <label for="email" class="form-label">Email</label>
-                  <input type="email" class="form-control" id="email" name="email" required placeholder="you@example.com" />
-                  <div class="invalid-feedback">Please provide a valid email.</div>
-                </div>
-                <div class="mb-3">
-                  <label for="message" class="form-label">Message</label>
-                  <textarea class="form-control" id="message" name="message" rows="4" required placeholder="How can we help?"></textarea>
-                  <div class="invalid-feedback">Please enter a message.</div>
-                </div>
-                <button type="submit" class="btn btn-success">Send Message</button>
-              </form>
-              <p class="form-status small text-muted mt-2" id="formStatus" aria-live="polite"></p>
-            </div>
-          </div>
-        </div>
-
-        <!-- Right Column: Contact Details + Map -->
-        <div class="col-md-4">
-          <!-- Contact Details -->
-          <div class="card shadow-sm mb-4">
-            <div class="card-body">
-              <h5 class="card-title">College Contacts</h5>
-              <ul class="list-unstyled contact-list mt-3">
-                <li class="mb-2"><span class="fw-semibold">Phone:</span> <a href="tel:+254700000000">+254 700 000 000</a></li>
-                <li class="mb-2"><span class="fw-semibold">Email:</span> <a href="mailto:info@kigumotvc.ac.ke">info@example.com</a></li>
-                <li class="mb-2"><span class="fw-semibold">Address:</span> Kigumo, Murang'a County, Kenya</li>
-                <li class="mb-2"><span class="fw-semibold">Office Hours:</span> Mon–Fri, 8:00–17:00 (EAT)</li>
-              </ul>
-            </div>
-          </div>
-
-          <!-- Map Location -->
-          <div class="card shadow-sm">
-            <div class="card-body">
-              <h5 class="card-title mb-3">Our Location</h5>
-              <div class="ratio ratio-16x9">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d31609.387103673667!2d37.043413257088176!3d-0.834267664951953!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1828b957a6d873a1%3A0x1a75fb6109124f76!2sKigumo%20Technical%20and%20Professional%20College!5e0!3m2!1sen!2ske!4v1768053954674!5m2!1sen!2ske" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
+  
 
 </body>
 </html>
