--- a/FrontEnd/html/contact.html
+++ b/FrontEnd/html/contact.html
@@ -1,11 +1,185 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact Deatisl</title>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <base href="/Kigumo-Technical/" />
+  <title>Kigumo Technical And Vocational College</title>
+  <link rel="shortcut icon" href="FrontEnd/images/fav.png" type="image/x-icon" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous" />
+
+  <link rel="stylesheet" href="FrontEnd/css/styles.css">
 </head>
+
 <body>
-    
+  <!-- Combined navbar: logo only; yellow background -->
+  <nav class="navbar navbar-expand-lg navbar-light bg-warning" aria-label="Main navigation">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">
+        <img src="FrontEnd/images/official_logo.jpg" alt="Kigumo logo" class="img-fluid" />
+        <!-- <span class="college-name">Kigumo Technical And Vocational College</span> -->
+      </a>
+
+      <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#mainNavCollapse"
+        aria-controls="mainNavCollapse" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="toggler-icon" aria-hidden="true"><span class="bar"></span><span class="bar"></span><span class="bar"></span></span>
+        <span class="visually-hidden">Toggle navigation</span>
+      </button>
+
+      <div class="collapse navbar-collapse" id="mainNavCollapse">
+        <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
+          <li class="nav-item"><a class="nav-link active" href="#">Home</a></li>
+
+          <!-- About with nested Administration submenu -->
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown" aria-expanded="false">About</a>
+            <ul class="dropdown-menu">
+              <li><a class="dropdown-item" href="#">About Kigumo TVC</a></li>
+              <li><a class="dropdown-item" href="#">Service Charter</a></li>
+              <li><a class="dropdown-item" href="#">QMS</a></li>
+              <li><a class="dropdown-item" href="#">Vision &amp; Mission</a></li>
+              <li><hr class="dropdown-divider"></li>
+
+              <li class="dropdown-submenu">
+                <a class="dropdown-item dropdown-toggle" href="#" aria-expanded="false">Administration</a>
+                <ul class="dropdown-menu">
+                  <li><a class="dropdown-item" href="#">Board of Management</a></li>
+                  <li><a class="dropdown-item" href="#">Chief Principal</a></li>
+                  <li><a class="dropdown-item" href="#">Deputy Principal Academics</a></li>
+                  <li><a class="dropdown-item" href="#">Deputy Principal Administration</a></li>
+                  <li><a class="dropdown-item" href="#">Dean of Students</a></li>
+                  <li><a class="dropdown-item" href="#">Head of Departments / HOS</a></li>
+                </ul>
+              </li>
+            </ul>
+          </li>
+
+          <!-- Departments with nested Academic and Non-Academic -->
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown" aria-expanded="false">Departments</a>
+            <ul class="dropdown-menu">
+              <li class="dropdown-submenu">
+                <a class="dropdown-item dropdown-toggle" href="#" aria-expanded="false">Academic</a>
+                <ul class="dropdown-menu">
+                  <li><a class="dropdown-item" href="#">ICT</a></li>
+                  <li><a class="dropdown-item" href="#">Agriculture</a></li>
+                  <li><a class="dropdown-item" href="#">Mechanical</a></li>
+                  <li><a class="dropdown-item" href="#">Building &amp; Construction</a></li>
+                  <li><a class="dropdown-item" href="#">Electrical &amp; Electronics</a></li>
+                  <li><a class="dropdown-item" href="#">Hospitality</a></li>
+                  <li><a class="dropdown-item" href="#">Cosmetology</a></li>
+                  <li><a class="dropdown-item" href="#">Fashion &amp; Design</a></li>
+                </ul>
+              </li>
+
+              <li><hr class="dropdown-divider"></li>
+
+              <li class="dropdown-submenu">
+                <a class="dropdown-item dropdown-toggle" href="#" aria-expanded="false">Non Academic</a>
+                <ul class="dropdown-menu">
+                  <li><a class="dropdown-item" href="#">Board of Management</a></li>
+                  <li><a class="dropdown-item" href="#">Sports</a></li>
+                  <li><a class="dropdown-item" href="#">Guidance &amp; Counselling</a></li>
+                  <li><a class="dropdown-item" href="#">Science</a></li>
+                  <li><a class="dropdown-item" href="#">Marketing &amp; Advertisement</a></li>
+                  <li><a class="dropdown-item" href="#">Music</a></li>
+                </ul>
+              </li>
+            </ul>
+          </li>
+
+          <li class="nav-item"><a class="nav-link" href="#">Courses</a></li>
+          <li class="nav-item"><a class="nav-link" href="#">News &amp; Events</a></li>
+          <li class="nav-item"><a class="nav-link" href="#">Careers</a></li>
+          <li class="nav-item"><a class="nav-link" href="#">School Portals</a></li>
+          <li class="nav-item"><a class="nav-link" href="#">Downloads</a></li>
+          <li class="nav-item"><a class="nav-link" href="#contact">Students</a></li>
+          <li class="nav-item"><a class="nav-link" href="#contact">Contact us</a></li>
+        </ul>
+
+        <form class="d-flex ms-auto ms-lg-0" role="search">
+          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" />
+          <button class="btn btn-outline-success" type="submit">Search</button>
+        </form>
+      </div>
+    </div>
+  </nav>
+
+ 
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
+    crossorigin="anonymous"></script>
+  <script type="module" src="FrontEnd/js/main.js"></script>
+ 
+  <!-- Contact Section -->
+  <section id="contact" class="contact-section py-5 bg-light">
+    <div class="container">
+      <div class="row mb-4">
+        <div class="col-12 text-center">
+          <h2 class="fw-bold">Contact Us</h2>
+          <p class="text-muted">Reach out for admissions, courses, or general support.</p>
+        </div>
+      </div>
+
+      <div class="row g-4">
+        <!-- Contact Form (Left Side) -->
+        <div class="col-md-8">
+          <div class="card h-100 shadow-sm">
+            <div class="card-body">
+              <h5 class="card-title">Send Us a Message</h5>
+              <form id="contactForm" class="mt-3" novalidate>
+                <div class="mb-3">
+                  <label for="name" class="form-label">Full Name</label>
+                  <input type="text" class="form-control" id="name" name="name" required placeholder="Enter your name" />
+                  <div class="invalid-feedback">Please enter your name.</div>
+                </div>
+                <div class="mb-3">
+                  <label for="email" class="form-label">Email</label>
+                  <input type="email" class="form-control" id="email" name="email" required placeholder="you@example.com" />
+                  <div class="invalid-feedback">Please provide a valid email.</div>
+                </div>
+                <div class="mb-3">
+                  <label for="message" class="form-label">Message</label>
+                  <textarea class="form-control" id="message" name="message" rows="4" required placeholder="How can we help?"></textarea>
+                  <div class="invalid-feedback">Please enter a message.</div>
+                </div>
+                <button type="submit" class="btn btn-success">Send Message</button>
+              </form>
+              <p class="form-status small text-muted mt-2" id="formStatus" aria-live="polite"></p>
+            </div>
+          </div>
+        </div>
+
+        <!-- Right Column: Contact Details + Map -->
+        <div class="col-md-4">
+          <!-- Contact Details -->
+          <div class="card shadow-sm mb-4">
+            <div class="card-body">
+              <h5 class="card-title">College Contacts</h5>
+              <ul class="list-unstyled contact-list mt-3">
+                <li class="mb-2"><span class="fw-semibold">Phone:</span> <a href="tel:+254700000000">+254 700 000 000</a></li>
+                <li class="mb-2"><span class="fw-semibold">Email:</span> <a href="mailto:info@kigumotvc.ac.ke">info@example.com</a></li>
+                <li class="mb-2"><span class="fw-semibold">Address:</span> Kigumo, Murang'a County, Kenya</li>
+                <li class="mb-2"><span class="fw-semibold">Office Hours:</span> Mon–Fri, 8:00–17:00 (EAT)</li>
+              </ul>
+            </div>
+          </div>
+
+          <!-- Map Location -->
+          <div class="card shadow-sm">
+            <div class="card-body">
+              <h5 class="card-title mb-3">Our Location</h5>
+              <div class="ratio ratio-16x9">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d31609.387103673667!2d37.043413257088176!3d-0.834267664951953!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1828b957a6d873a1%3A0x1a75fb6109124f76!2sKigumo%20Technical%20and%20Professional%20College!5e0!3m2!1sen!2ske!4v1768053954674!5m2!1sen!2ske" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
 </body>
 </html>
