Update contact information in contact.html

--- a/FrontEnd/html/contact.html
+++ b/FrontEnd/html/contact.html
@@ -159,10 +159,10 @@
             <div class="card-body">
               <h5 class="card-title">College Contacts</h5>
               <ul class="list-unstyled contact-list mt-3">
-                <li class="mb-2"><span class="fw-semibold">Phone:</span> <a href="tel:+254700000000">+254 700 000 000</a></li>
-                <li class="mb-2"><span class="fw-semibold">Email:</span> <a href="mailto:info@kigumotvc.ac.ke">info@example.com</a></li>
+                <li class="mb-2"><span class="fw-semibold">Phone:</span> <a href="tel:+254769394273">+254 769 394 273</a></li>
+                <li class="mb-2"><span class="fw-semibold">Email:</span> <a href="mailto:info@kigumotvc.ac.ke">info@kigumotvc.ac.ke</a></li>
                 <li class="mb-2"><span class="fw-semibold">Address:</span> Kigumo, Murang'a County, Kenya</li>
-                <li class="mb-2"><span class="fw-semibold">Office Hours:</span> Mon–Fri, 8:00–17:00 (EAT)</li>
+                <li class="mb-2"><span class="fw-semibold">Office Hours:</span> Mon–Fri, 8:00–16:30 (EAT)</li>
               </ul>
             </div>
           </div>
