--- a/FrontEnd/html/contact.html
+++ b/FrontEnd/html/contact.html
@@ -8,6 +8,7 @@
   <link rel="shortcut icon" href="FrontEnd/images/fav.png" type="image/x-icon" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 
   <link rel="stylesheet" href="FrontEnd/css/styles.css">
 </head>
@@ -157,13 +158,44 @@
           <!-- Contact Details -->
           <div class="card shadow-sm mb-4">
             <div class="card-body">
-              <h5 class="card-title">College Contacts</h5>
+              <h5 class="card-title fw-bold">Get in touch</h5>
               <ul class="list-unstyled contact-list mt-3">
-                <li class="mb-2"><span class="fw-semibold">Phone:</span> <a href="tel:+254700000000">+254 700 000 000</a></li>
-                <li class="mb-2"><span class="fw-semibold">Email:</span> <a href="mailto:info@kigumotvc.ac.ke">info@example.com</a></li>
-                <li class="mb-2"><span class="fw-semibold">Address:</span> Kigumo, Murang'a County, Kenya</li>
-                <li class="mb-2"><span class="fw-semibold">Office Hours:</span> Mon–Fri, 8:00–17:00 (EAT)</li>
+                <li class="mb-3">
+                  <i class="bi bi-geo-alt-fill text-success me-2"></i>
+                  <span class="text-dark">Mumbi Rd, Nyeri, Nyeri 10100</span>
+                </li>
+                <li class="mb-3">
+                  <i class="bi bi-envelope-fill text-success me-2"></i>
+                  <a href="mailto:info@thenyeripoly.ac.ke" class="text-dark">info@thenyeripoly.ac.ke</a>
+                </li>
+                <li class="mb-3">
+                  <i class="bi bi-telephone-fill text-success me-2"></i>
+                  <a href="tel:+254724477942" class="text-dark">+254 724 477 942</a>
+                </li>
+                <li class="mb-3">
+                  <i class="bi bi-mailbox-fill text-success me-2"></i>
+                  <span class="text-dark">P. O Box 465 - 10100 Nyeri, Kenya</span>
+                </li>
               </ul>
+              
+              <h5 class="card-title fw-bold mt-4">Follow Us</h5>
+              <div class="social-links mt-3 d-flex gap-2">
+                <a href="#" class="btn btn-primary btn-sm rounded-circle" style="width: 40px; height: 40px; padding: 0; display: flex; align-items: center; justify-content: center;" aria-label="Facebook">
+                  <i class="bi bi-facebook"></i>
+                </a>
+                <a href="#" class="btn btn-info btn-sm rounded-circle text-white" style="width: 40px; height: 40px; padding: 0; display: flex; align-items: center; justify-content: center;" aria-label="Twitter">
+                  <i class="bi bi-twitter"></i>
+                </a>
+                <a href="#" class="btn btn-danger btn-sm rounded-circle" style="width: 40px; height: 40px; padding: 0; display: flex; align-items: center; justify-content: center;" aria-label="YouTube">
+                  <i class="bi bi-youtube"></i>
+                </a>
+                <a href="#" class="btn btn-primary btn-sm rounded-circle" style="width: 40px; height: 40px; padding: 0; display: flex; align-items: center; justify-content: center; background-color: #0088cc;" aria-label="Telegram">
+                  <i class="bi bi-telegram"></i>
+                </a>
+                <a href="#" class="btn btn-success btn-sm rounded-circle" style="width: 40px; height: 40px; padding: 0; display: flex; align-items: center; justify-content: center;" aria-label="WhatsApp">
+                  <i class="bi bi-whatsapp"></i>
+                </a>
+              </div>
             </div>
           </div>
 
