--- a/FrontEnd/html/contact.html
+++ b/FrontEnd/html/contact.html
@@ -162,19 +162,19 @@
               <ul class="list-unstyled contact-list mt-3">
                 <li class="mb-3">
                   <i class="bi bi-geo-alt-fill text-success me-2"></i>
-                  <span class="text-dark">Mumbi Rd, Nyeri, Nyeri 10100</span>
+                  <span class="text-dark">Kaharati - Kangari  Rd, Murang`a, Kigumo 10203</span>
                 </li>
                 <li class="mb-3">
                   <i class="bi bi-envelope-fill text-success me-2"></i>
-                  <a href="mailto:info@thenyeripoly.ac.ke" class="text-dark">info@thenyeripoly.ac.ke</a>
+                  <a href="mailto:info@kigumotvc.ac.ke" class="text-dark">info@kigumotvc.ac.ke</a>
                 </li>
                 <li class="mb-3">
                   <i class="bi bi-telephone-fill text-success me-2"></i>
-                  <a href="tel:+254724477942" class="text-dark">+254 724 477 942</a>
+                  <a href="tel:+254769394273" class="text-dark">+254 769 394 273</a>
                 </li>
                 <li class="mb-3">
                   <i class="bi bi-mailbox-fill text-success me-2"></i>
-                  <span class="text-dark">P. O Box 465 - 10100 Nyeri, Kenya</span>
+                  <span class="text-dark">P. O Box 5 - 10203 Kigumo, Kenya</span>
                 </li>
               </ul>
               
