Change P.O. Box icon to box-seam

--- a/FrontEnd/html/contact.html
+++ b/FrontEnd/html/contact.html
@@ -173,7 +173,7 @@
                   <a href="tel:+254769394273" class="text-dark">+254 769 394 273</a>
                 </li>
                 <li class="mb-3">
-                  <i class="bi bi-mailbox-fill text-success me-2"></i>
+                  <i class="bi bi-box-seam text-success me-2"></i>
                   <span class="text-dark">P. O Box 5 - 10203 Kigumo, Kenya</span>
                 </li>
               </ul>
