--- a/FrontEnd/html/contact.html
+++ b/FrontEnd/html/contact.html
@@ -277,7 +277,7 @@
       <hr class="border-top border-success border-opacity-50 my-4">
       <div class="d-flex flex-column flex-md-row justify-content-between align-items-center small text-white-50">
         <span>&copy; <span id="year"></span> Kigumo Technical And Vocational College. All rights reserved.</span>
-        <span>Designed with Bootstrap 5</span>
+        <!-- <span>Designed with Bootstrap 5</span> -->
       </div>
     </div>
   </footer>
