--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous" />
 
+  <!-- Bootstrap Icons for social + arrow icons -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+
   <link rel="stylesheet" href="FrontEnd/css/styles.css">
 </head>
 
@@ -161,6 +164,8 @@
       <span class="carousel-control-next-icon" aria-hidden="true"></span><span class="visually-hidden">Next</span>
     </button>
   </div>
+
+
   <!-- Site Footer -->
   <footer class="site-footer text-light pt-5 pb-4 mt-5">
     <div class="container">
@@ -204,7 +209,7 @@
             <li><a href="#"><i class="bi bi-arrow-right-short"></i> Latest News</a></li>
             <li><a href="#"><i class="bi bi-arrow-right-short"></i> Job Vacancies</a></li>
             <li><a href="#"><i class="bi bi-arrow-right-short"></i> FAQs</a></li>
-            <li><a href="#"><i class="bi bi-arrow-right-short"></i> Contact</a></li>
+            <li><a href="FrontEnd/html/contact.html"><i class="bi bi-arrow-right-short"></i> Contact</a></li>
           </ul>
         </div>
 
