Footer (index): make About Us paragraph yellow via .footer-about

--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
             <span class="fw-bold h5 m-0">KIGUMO TVC</span>
           </div>
           <h6 class="text-uppercase fw-bold mb-3">About Us</h6>
-          <p class="mb-4 small text-white-50">
+          <p class="mb-4 small footer-about">
             The College is committed to training technically skilled personnel for employment across sectors of the
             economy. We offer programs from Artisan to Diploma, equipped with modern facilities and dedicated staff.
           </p>
