--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
         </div>
 
         <!-- Quick Links -->
-        <div class="col-6 col-lg-2">
+        <div class="col-12 col-sm-6 col-lg-2">
           <h6 class="text-uppercase fw-bold mb-3">Quick Links</h6>
           <ul class="list-unstyled footer-links">
             <li><a href="#"><i class="bi bi-arrow-right-short"></i> Home</a></li>
@@ -214,7 +214,7 @@
         </div>
 
         <!-- Get In Touch -->
-        <div class="col-6 col-lg-3">
+        <div class="col-12 col-sm-6 col-lg-3">
           <h6 class="text-uppercase fw-bold mb-3">Get In Touch</h6>
           <ul class="list-unstyled footer-contact">
             <li class="mb-2"><i class="bi bi-geo-alt-fill text-success me-2"></i> P.O. Box 5 - 10203 Kigumo, Kenya</li>
@@ -225,7 +225,7 @@
         </div>
 
         <!-- Other Links -->
-        <div class="col-lg-3">
+        <div class="col-12 col-lg-3">
           <h6 class="text-uppercase fw-bold mb-3">Other Links</h6>
           <ul class="list-unstyled footer-links">
             <li><a href="#"><i class="bi bi-arrow-right-short"></i> Apply Help Loan</a></li>
