--- a/FrontEnd/htm/contact.html
+++ b/FrontEnd/htm/contact.html
@@ -8,8 +8,6 @@
   <link rel="shortcut icon" href="FrontEnd/images/fav.png" type="image/x-icon" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous" />
-
-  <!-- Bootstrap Icons for social + arrow icons -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 
   <link rel="stylesheet" href="FrontEnd/css/styles.css">
@@ -97,8 +95,8 @@
           <li class="nav-item"><a class="nav-link" href="#">Careers</a></li>
           <li class="nav-item"><a class="nav-link" href="#">School Portals</a></li>
           <li class="nav-item"><a class="nav-link" href="#">Downloads</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">Students</a></li>
-          <li class="nav-item"><a class="nav-link" href="FrontEnd/html/contact.html">Contact us</a></li>
+          <li class="nav-item"><a class="nav-link" href="#contact">Students</a></li>
+          <li class="nav-item"><a class="nav-link" href="#contact">Contact us</a></li>
         </ul>
 
         <form class="d-flex ms-auto ms-lg-0" role="search">
@@ -109,62 +107,99 @@
     </div>
   </nav>
 
-  <!-- carousel with overlay text -->
-  <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img src="FrontEnd/images/school1.jpg" class="d-block w-100" alt="">
-        <div class="carousel-overlay">
-          <div class="carousel-caption">
-            <p class="carousel-tag"><span class="tag-green">Kigumo Technical And</span> <span class="tag-highlight">Vocational College</span></p>
-            <h1 class="carousel-title">Apply for January 2026 Intake</h1>
-            <p class="carousel-subtitle">Secure Your Spot At Kigumo TVC Today. Join A Thriving Community Of Learners.</p>
-            <a href="#" class="carousel-btn">Our Programmes →</a>
-          </div>
+ 
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
+    crossorigin="anonymous"></script>
+  <script type="module" src="FrontEnd/js/main.js"></script>
+ 
+  <!-- Contact Section -->
+  <section id="contact" class="contact-section py-5 bg-light">
+    <div class="container">
+      <div class="row mb-4">
+        <div class="col-12 text-center">
+          <h2 class="fw-bold">Contact Us</h2>
+          <p class="text-muted">Reach out for admissions, courses, or general support.</p>
         </div>
       </div>
-      <div class="carousel-item">
-        <img src="FrontEnd/images/adm1.jpg" class="d-block w-100" alt="">
-        <div class="carousel-overlay">
-          <div class="carousel-caption">
-            <p class="carousel-tag"><span class="tag-green">Kigumo Technical And</span> <span class="tag-highlight">Vocational College</span></p>
-            <h1 class="carousel-title">Apply for January 2026 Intake</h1>
-            <p class="carousel-subtitle">Secure Your Spot At Kigumo TVC Today. Join A Thriving Community Of Learners.</p>
-            <a href="#" class="carousel-btn">Our Programmes →</a>
+
+      <div class="row g-4">
+        <!-- Contact Form (Left Side) -->
+        <div class="col-md-8">
+          <div class="card h-100 shadow-sm">
+            <div class="card-body">
+              <h5 class="card-title">Send Us a Message</h5>
+              <form id="contactForm" class="mt-3" novalidate>
+                <div class="mb-3">
+                  <label for="name" class="form-label">Full Name</label>
+                  <input type="text" class="form-control" id="name" name="name" required placeholder="Enter your name" />
+                  <div class="invalid-feedback">Please enter your name.</div>
+                </div>
+                <div class="mb-3">
+                  <label for="email" class="form-label">Email</label>
+                  <input type="email" class="form-control" id="email" name="email" required placeholder="you@example.com" />
+                  <div class="invalid-feedback">Please provide a valid email.</div>
+                </div>
+                <div class="mb-3">
+                  <label for="message" class="form-label">Message</label>
+                  <textarea class="form-control" id="message" name="message" rows="4" required placeholder="How can we help?"></textarea>
+                  <div class="invalid-feedback">Please enter a message.</div>
+                </div>
+                <button type="submit" class="btn btn-success">Send Message</button>
+              </form>
+              <p class="form-status small text-muted mt-2" id="formStatus" aria-live="polite"></p>
+            </div>
           </div>
         </div>
-      </div>
-      <div class="carousel-item">
-        <img src="FrontEnd/images/tra1.jpg" class="d-block w-100" alt="">
-        <div class="carousel-overlay">
-          <div class="carousel-caption">
-            <p class="carousel-tag"><span class="tag-green">Kigumo Technical And</span> <span class="tag-highlight">Vocational College</span></p>
-            <h1 class="carousel-title">Apply for January 2026 Intake</h1>
-            <p class="carousel-subtitle">Secure Your Spot At Kigumo TVC Today. Join A Thriving Community Of Learners.</p>
-            <a href="#" class="carousel-btn">Our Programmes →</a>
+
+        <!-- Right Column: Contact Details + Map -->
+        <div class="col-md-4">
+          <!-- Contact Details -->
+          <div class="card shadow-sm mb-4">
+            <div class="card-body">
+              <h5 class="card-title fw-bold">Get in touch</h5>
+              <ul class="list-unstyled contact-list mt-3">
+                <li class="mb-2"><span class="fw-semibold">Phone:</span> <a href="tel:+254769394273">+254 769 394 273</a></li>
+                <li class="mb-2"><span class="fw-semibold">Email:</span> <a href="mailto:info@kigumotvc.ac.ke">info@kigumotvc.ac.ke</a></li>
+                <li class="mb-2"><span class="fw-semibold">Address:</span> Kigumo, Murang'a County, Kenya</li>
+                <li class="mb-2"><span class="fw-semibold">Office Hours:</span> Mon–Fri, 8:00–16:30 (EAT)</li>
+              </ul>
+              
+              <h5 class="card-title fw-bold mt-4">Follow Us</h5>
+              <div class="social-links mt-3 d-flex gap-2">
+                <a href="#" class="btn btn-primary btn-sm rounded-circle" style="width: 40px; height: 40px; padding: 0; display: flex; align-items: center; justify-content: center;" aria-label="Facebook">
+                  <i class="bi bi-facebook"></i>
+                </a>
+                <a href="#" class="btn btn-info btn-sm rounded-circle text-white" style="width: 40px; height: 40px; padding: 0; display: flex; align-items: center; justify-content: center;" aria-label="Twitter">
+                  <i class="bi bi-twitter"></i>
+                </a>
+                <a href="#" class="btn btn-danger btn-sm rounded-circle" style="width: 40px; height: 40px; padding: 0; display: flex; align-items: center; justify-content: center;" aria-label="YouTube">
+                  <i class="bi bi-youtube"></i>
+                </a>
+                <a href="#" class="btn btn-primary btn-sm rounded-circle" style="width: 40px; height: 40px; padding: 0; display: flex; align-items: center; justify-content: center; background-color: #0088cc;" aria-label="Telegram">
+                  <i class="bi bi-telegram"></i>
+                </a>
+                <a href="#" class="btn btn-success btn-sm rounded-circle" style="width: 40px; height: 40px; padding: 0; display: flex; align-items: center; justify-content: center;" aria-label="WhatsApp">
+                  <i class="bi bi-whatsapp"></i>
+                </a>
+              </div>
+            </div>
           </div>
-        </div>
-      </div>
-      <div class="carousel-item">
-        <img src="FrontEnd/images/tree planting 1.jpg" class="d-block w-100" alt="">
-        <div class="carousel-overlay">
-          <div class="carousel-caption">
-            <p class="carousel-tag"><span class="tag-green">Kigumo Technical And</span> <span class="tag-highlight">Vocational College</span></p>
-            <h1 class="carousel-title">Apply for January 2026 Intake</h1>
-            <p class="carousel-subtitle">Secure Your Spot At Kigumo TVC Today. Join A Thriving Community Of Learners.</p>
-            <a href="#" class="carousel-btn">Our Programmes →</a>
+
+          <!-- Map Location -->
+          <div class="card shadow-sm">
+            <div class="card-body">
+              <h5 class="card-title mb-3">Our Location</h5>
+              <div class="ratio ratio-16x9">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d31609.387103673667!2d37.043413257088176!3d-0.834267664951953!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1828b957a6d873a1%3A0x1a75fb6109124f76!2sKigumo%20Technical%20and%20Professional%20College!5e0!3m2!1sen!2ske!4v1768053954674!5m2!1sen!2ske" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+              </div>
+            </div>
           </div>
         </div>
       </div>
     </div>
-    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span><span class="visually-hidden">Previous</span>
-    </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span><span class="visually-hidden">Next</span>
-    </button>
-  </div>
-
+  </section>
 
   <!-- Site Footer -->
   <footer class="site-footer text-light pt-5 pb-4 mt-5">
@@ -200,7 +235,7 @@
         </div>
 
         <!-- Quick Links -->
-        <div class="col-6 col-lg-2">
+        <div class="col-12 col-sm-6 col-lg-2">
           <h6 class="text-uppercase fw-bold mb-3">Quick Links</h6>
           <ul class="list-unstyled footer-links">
             <li><a href="#"><i class="bi bi-arrow-right-short"></i> Home</a></li>
@@ -209,12 +244,12 @@
             <li><a href="#"><i class="bi bi-arrow-right-short"></i> Latest News</a></li>
             <li><a href="#"><i class="bi bi-arrow-right-short"></i> Job Vacancies</a></li>
             <li><a href="#"><i class="bi bi-arrow-right-short"></i> FAQs</a></li>
-            <li><a href="FrontEnd/html/contact.html"><i class="bi bi-arrow-right-short"></i> Contact</a></li>
+            <li><a href="#"><i class="bi bi-arrow-right-short"></i> Contact</a></li>
           </ul>
         </div>
 
         <!-- Get In Touch -->
-        <div class="col-6 col-lg-3">
+        <div class="col-12 col-sm-6 col-lg-3">
           <h6 class="text-uppercase fw-bold mb-3">Get In Touch</h6>
           <ul class="list-unstyled footer-contact">
             <li class="mb-2"><i class="bi bi-geo-alt-fill text-success me-2"></i> P.O. Box 5 - 10203 Kigumo, Kenya</li>
@@ -225,7 +260,7 @@
         </div>
 
         <!-- Other Links -->
-        <div class="col-lg-3">
+        <div class="col-12 col-lg-3">
           <h6 class="text-uppercase fw-bold mb-3">Other Links</h6>
           <ul class="list-unstyled footer-links">
             <li><a href="#"><i class="bi bi-arrow-right-short"></i> Apply Help Loan</a></li>
@@ -251,13 +286,6 @@
     // Footer year
     document.getElementById('year').textContent = new Date().getFullYear();
   </script>
-
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
-    crossorigin="anonymous"></script>
-  <script type="module" src="FrontEnd/js/main.js"></script>
- 
-  
 
 </body>
 </html>
