--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
@@ -26,7 +27,8 @@
 
       <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#mainNavCollapse"
         aria-controls="mainNavCollapse" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="toggler-icon" aria-hidden="true"><span class="bar"></span><span class="bar"></span><span class="bar"></span></span>
+        <span class="toggler-icon" aria-hidden="true"><span class="bar"></span><span class="bar"></span><span
+            class="bar"></span></span>
         <span class="visually-hidden">Toggle navigation</span>
       </button>
 
@@ -42,7 +44,9 @@
               <li><a class="dropdown-item" href="#">Service Charter</a></li>
               <li><a class="dropdown-item" href="#">QMS</a></li>
               <li><a class="dropdown-item" href="#">Vision &amp; Mission</a></li>
-              <li><hr class="dropdown-divider"></li>
+              <li>
+                <hr class="dropdown-divider">
+              </li>
 
               <li class="dropdown-submenu">
                 <a class="dropdown-item dropdown-toggle" href="#" aria-expanded="false">Administration</a>
@@ -76,7 +80,9 @@
                 </ul>
               </li>
 
-              <li><hr class="dropdown-divider"></li>
+              <li>
+                <hr class="dropdown-divider">
+              </li>
 
               <li class="dropdown-submenu">
                 <a class="dropdown-item dropdown-toggle" href="#" aria-expanded="false">Non Academic</a>
@@ -116,9 +122,11 @@
         <img src="FrontEnd/images/school1.jpg" class="d-block w-100" alt="">
         <div class="carousel-overlay">
           <div class="carousel-caption">
-            <p class="carousel-tag"><span class="tag-green">Kigumo Technical And</span> <span class="tag-highlight">Vocational College</span></p>
+            <p class="carousel-tag"><span class="tag-green">Kigumo Technical And</span> <span
+                class="tag-highlight">Vocational College</span></p>
             <h1 class="carousel-title">Apply for January 2026 Intake</h1>
-            <p class="carousel-subtitle">Secure Your Spot At Kigumo TVC Today. Join A Thriving Community Of Learners.</p>
+            <p class="carousel-subtitle">Secure Your Spot At Kigumo TVC Today. Join A Thriving Community Of Learners.
+            </p>
             <a href="#" class="carousel-btn">Our Programmes →</a>
           </div>
         </div>
@@ -127,9 +135,11 @@
         <img src="FrontEnd/images/adm1.jpg" class="d-block w-100" alt="">
         <div class="carousel-overlay">
           <div class="carousel-caption">
-            <p class="carousel-tag"><span class="tag-green">Kigumo Technical And</span> <span class="tag-highlight">Vocational College</span></p>
+            <p class="carousel-tag"><span class="tag-green">Kigumo Technical And</span> <span
+                class="tag-highlight">Vocational College</span></p>
             <h1 class="carousel-title">Apply for January 2026 Intake</h1>
-            <p class="carousel-subtitle">Secure Your Spot At Kigumo TVC Today. Join A Thriving Community Of Learners.</p>
+            <p class="carousel-subtitle">Secure Your Spot At Kigumo TVC Today. Join A Thriving Community Of Learners.
+            </p>
             <a href="#" class="carousel-btn">Our Programmes →</a>
           </div>
         </div>
@@ -138,9 +148,11 @@
         <img src="FrontEnd/images/tra1.jpg" class="d-block w-100" alt="">
         <div class="carousel-overlay">
           <div class="carousel-caption">
-            <p class="carousel-tag"><span class="tag-green">Kigumo Technical And</span> <span class="tag-highlight">Vocational College</span></p>
+            <p class="carousel-tag"><span class="tag-green">Kigumo Technical And</span> <span
+                class="tag-highlight">Vocational College</span></p>
             <h1 class="carousel-title">Apply for January 2026 Intake</h1>
-            <p class="carousel-subtitle">Secure Your Spot At Kigumo TVC Today. Join A Thriving Community Of Learners.</p>
+            <p class="carousel-subtitle">Secure Your Spot At Kigumo TVC Today. Join A Thriving Community Of Learners.
+            </p>
             <a href="#" class="carousel-btn">Our Programmes →</a>
           </div>
         </div>
@@ -149,18 +161,22 @@
         <img src="FrontEnd/images/tree planting 1.jpg" class="d-block w-100" alt="">
         <div class="carousel-overlay">
           <div class="carousel-caption">
-            <p class="carousel-tag"><span class="tag-green">Kigumo Technical And</span> <span class="tag-highlight">Vocational College</span></p>
+            <p class="carousel-tag"><span class="tag-green">Kigumo Technical And</span> <span
+                class="tag-highlight">Vocational College</span></p>
             <h1 class="carousel-title">Apply for January 2026 Intake</h1>
-            <p class="carousel-subtitle">Secure Your Spot At Kigumo TVC Today. Join A Thriving Community Of Learners.</p>
+            <p class="carousel-subtitle">Secure Your Spot At Kigumo TVC Today. Join A Thriving Community Of Learners.
+            </p>
             <a href="#" class="carousel-btn">Our Programmes →</a>
           </div>
         </div>
       </div>
     </div>
-    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying"
+      data-bs-slide="prev">
       <span class="carousel-control-prev-icon" aria-hidden="true"></span><span class="visually-hidden">Previous</span>
     </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="next">
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying"
+      data-bs-slide="next">
       <span class="carousel-control-next-icon" aria-hidden="true"></span><span class="visually-hidden">Next</span>
     </button>
   </div>
@@ -185,7 +201,8 @@
           <h6 class="text-uppercase fw-bold mb-2">Subscribe For Updates</h6>
           <form class="subscribe-form" onsubmit="event.preventDefault();">
             <div class="input-group">
-              <input type="email" class="form-control form-control-sm" placeholder="Your Email Address" aria-label="Email for updates">
+              <input type="email" class="form-control form-control-sm" placeholder="Your Email Address"
+                aria-label="Email for updates">
               <button class="btn btn-warning" type="submit" aria-label="Subscribe">&rarr;</button>
             </div>
           </form>
@@ -218,9 +235,12 @@
           <h6 class="text-uppercase fw-bold mb-3">Get In Touch</h6>
           <ul class="list-unstyled footer-contact">
             <li class="mb-2"><i class="bi bi-geo-alt-fill text-success me-2"></i> P.O. Box 5 - 10203 Kigumo, Kenya</li>
-            <li class="mb-2"><i class="bi bi-telephone-fill text-success me-2"></i> <a href="tel:+254769394273">+254 769 394 273</a></li>
-            <li class="mb-2"><i class="bi bi-envelope-fill text-success me-2"></i> <a href="mailto:info@kigumotvc.ac.ke">info@kigumotvc.ac.ke</a></li>
-            <li class="mb-2"><i class="bi bi-whatsapp text-success me-2"></i> <a href="tel:+254769394273">+254 769 394 273</a></li>
+            <li class="mb-2"><i class="bi bi-telephone-fill text-success me-2"></i> <a href="tel:+254769394273">+254 769
+                394 273</a></li>
+            <li class="mb-2"><i class="bi bi-envelope-fill text-success me-2"></i> <a
+                href="mailto:info@kigumotvc.ac.ke">info@kigumotvc.ac.ke</a></li>
+            <li class="mb-2"><i class="bi bi-whatsapp text-success me-2"></i> <a href="tel:+254769394273">+254 769 394
+                273</a></li>
           </ul>
         </div>
 
@@ -228,11 +248,14 @@
         <div class="col-lg-3">
           <h6 class="text-uppercase fw-bold mb-3">Other Links</h6>
           <ul class="list-unstyled footer-links">
-            <li><a href="#"><i class="bi bi-arrow-right-short"></i> Apply Help Loan</a></li>
-            <li><a href="#"><i class="bi bi-arrow-right-short"></i> KUCCPS</a></li>
+            <li><a href="https://portal.hef.co.ke/auth/signup" target="_blank"><i class="bi bi-arrow-right-short"></i>
+                Apply Help Loan</a></li>
+            <li><a href="https://students.kuccps.net/login/" target="_blank"><i class="bi bi-arrow-right-short"></i>
+                KUCCPS</a></li>
             <li><a href="#"><i class="bi bi-arrow-right-short"></i> Updates</a></li>
             <li><a href="#"><i class="bi bi-arrow-right-short"></i> FAQ</a></li>
-            <li><a href="#"><i class="bi bi-arrow-right-short"></i> Student Portal</a></li>
+            <li><a href="https://intellimis.com/login" target="_blank""><i class=" bi bi-arrow-right-short"></i> Student
+                Portal</a></li>
             <li><a href="#"><i class="bi bi-arrow-right-short"></i> Staff Portal</a></li>
             <li><a href="#"><i class="bi bi-arrow-right-short"></i> Downloads</a></li>
           </ul>
@@ -256,8 +279,9 @@
     integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
     crossorigin="anonymous"></script>
   <script type="module" src="FrontEnd/js/main.js"></script>
- 
-  
+
+
 
 </body>
+
 </html>
