--- a/FrontEnd/htm/contact.html
+++ b/FrontEnd/htm/contact.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
@@ -24,7 +25,8 @@
 
       <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#mainNavCollapse"
         aria-controls="mainNavCollapse" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="toggler-icon" aria-hidden="true"><span class="bar"></span><span class="bar"></span><span class="bar"></span></span>
+        <span class="toggler-icon" aria-hidden="true"><span class="bar"></span><span class="bar"></span><span
+            class="bar"></span></span>
         <span class="visually-hidden">Toggle navigation</span>
       </button>
 
@@ -40,7 +42,9 @@
               <li><a class="dropdown-item" href="#">Service Charter</a></li>
               <li><a class="dropdown-item" href="#">QMS</a></li>
               <li><a class="dropdown-item" href="#">Vision &amp; Mission</a></li>
-              <li><hr class="dropdown-divider"></li>
+              <li>
+                <hr class="dropdown-divider">
+              </li>
 
               <li class="dropdown-submenu">
                 <a class="dropdown-item dropdown-toggle" href="#" aria-expanded="false">Administration</a>
@@ -74,7 +78,9 @@
                 </ul>
               </li>
 
-              <li><hr class="dropdown-divider"></li>
+              <li>
+                <hr class="dropdown-divider">
+              </li>
 
               <li class="dropdown-submenu">
                 <a class="dropdown-item dropdown-toggle" href="#" aria-expanded="false">Non Academic</a>
@@ -107,13 +113,13 @@
     </div>
   </nav>
 
- 
+
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
     crossorigin="anonymous"></script>
   <script type="module" src="FrontEnd/js/main.js"></script>
- 
+
   <!-- Contact Section -->
   <section id="contact" class="contact-section py-5 bg-light">
     <div class="container">
@@ -133,17 +139,20 @@
               <form id="contactForm" class="mt-3" novalidate>
                 <div class="mb-3">
                   <label for="name" class="form-label">Full Name</label>
-                  <input type="text" class="form-control" id="name" name="name" required placeholder="Enter your name" />
+                  <input type="text" class="form-control" id="name" name="name" required
+                    placeholder="Enter your name" />
                   <div class="invalid-feedback">Please enter your name.</div>
                 </div>
                 <div class="mb-3">
                   <label for="email" class="form-label">Email</label>
-                  <input type="email" class="form-control" id="email" name="email" required placeholder="you@example.com" />
+                  <input type="email" class="form-control" id="email" name="email" required
+                    placeholder="you@example.com" />
                   <div class="invalid-feedback">Please provide a valid email.</div>
                 </div>
                 <div class="mb-3">
                   <label for="message" class="form-label">Message</label>
-                  <textarea class="form-control" id="message" name="message" rows="4" required placeholder="How can we help?"></textarea>
+                  <textarea class="form-control" id="message" name="message" rows="4" required
+                    placeholder="How can we help?"></textarea>
                   <div class="invalid-feedback">Please enter a message.</div>
                 </div>
                 <button type="submit" class="btn btn-success">Send Message</button>
@@ -160,27 +169,39 @@
             <div class="card-body">
               <h5 class="card-title fw-bold">Get in touch</h5>
               <ul class="list-unstyled contact-list mt-3">
-                <li class="mb-2"><span class="fw-semibold">Phone:</span> <a href="tel:+254769394273">+254 769 394 273</a></li>
-                <li class="mb-2"><span class="fw-semibold">Email:</span> <a href="mailto:info@kigumotvc.ac.ke">info@kigumotvc.ac.ke</a></li>
+                <li class="mb-2"><span class="fw-semibold">Phone:</span> <a href="tel:+254769394273">+254 769 394
+                    273</a></li>
+                <li class="mb-2"><span class="fw-semibold">Email:</span> <a
+                    href="mailto:info@kigumotvc.ac.ke">info@kigumotvc.ac.ke</a></li>
                 <li class="mb-2"><span class="fw-semibold">Address:</span> Kigumo, Murang'a County, Kenya</li>
                 <li class="mb-2"><span class="fw-semibold">Office Hours:</span> Mon–Fri, 8:00–16:30 (EAT)</li>
               </ul>
-              
+
               <h5 class="card-title fw-bold mt-4">Follow Us</h5>
               <div class="social-links mt-3 d-flex gap-2">
-                <a href="#" class="btn btn-primary btn-sm rounded-circle" style="width: 40px; height: 40px; padding: 0; display: flex; align-items: center; justify-content: center;" aria-label="Facebook">
+                <a href="#" class="btn btn-primary btn-sm rounded-circle"
+                  style="width: 40px; height: 40px; padding: 0; display: flex; align-items: center; justify-content: center;"
+                  aria-label="Facebook">
                   <i class="bi bi-facebook"></i>
                 </a>
-                <a href="#" class="btn btn-info btn-sm rounded-circle text-white" style="width: 40px; height: 40px; padding: 0; display: flex; align-items: center; justify-content: center;" aria-label="Twitter">
+                <a href="#" class="btn btn-info btn-sm rounded-circle text-white"
+                  style="width: 40px; height: 40px; padding: 0; display: flex; align-items: center; justify-content: center;"
+                  aria-label="Twitter">
                   <i class="bi bi-twitter"></i>
                 </a>
-                <a href="#" class="btn btn-danger btn-sm rounded-circle" style="width: 40px; height: 40px; padding: 0; display: flex; align-items: center; justify-content: center;" aria-label="YouTube">
+                <a href="#" class="btn btn-danger btn-sm rounded-circle"
+                  style="width: 40px; height: 40px; padding: 0; display: flex; align-items: center; justify-content: center;"
+                  aria-label="YouTube">
                   <i class="bi bi-youtube"></i>
                 </a>
-                <a href="#" class="btn btn-primary btn-sm rounded-circle" style="width: 40px; height: 40px; padding: 0; display: flex; align-items: center; justify-content: center; background-color: #0088cc;" aria-label="Telegram">
+                <a href="#" class="btn btn-primary btn-sm rounded-circle"
+                  style="width: 40px; height: 40px; padding: 0; display: flex; align-items: center; justify-content: center; background-color: #0088cc;"
+                  aria-label="Telegram">
                   <i class="bi bi-telegram"></i>
                 </a>
-                <a href="#" class="btn btn-success btn-sm rounded-circle" style="width: 40px; height: 40px; padding: 0; display: flex; align-items: center; justify-content: center;" aria-label="WhatsApp">
+                <a href="#" class="btn btn-success btn-sm rounded-circle"
+                  style="width: 40px; height: 40px; padding: 0; display: flex; align-items: center; justify-content: center;"
+                  aria-label="WhatsApp">
                   <i class="bi bi-whatsapp"></i>
                 </a>
               </div>
@@ -192,7 +213,10 @@
             <div class="card-body">
               <h5 class="card-title mb-3">Our Location</h5>
               <div class="ratio ratio-16x9">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d31609.387103673667!2d37.043413257088176!3d-0.834267664951953!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1828b957a6d873a1%3A0x1a75fb6109124f76!2sKigumo%20Technical%20and%20Professional%20College!5e0!3m2!1sen!2ske!4v1768053954674!5m2!1sen!2ske" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <iframe
+                  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d31609.387103673667!2d37.043413257088176!3d-0.834267664951953!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1828b957a6d873a1%3A0x1a75fb6109124f76!2sKigumo%20Technical%20and%20Professional%20College!5e0!3m2!1sen!2ske!4v1768053954674!5m2!1sen!2ske"
+                  style="border:0;" allowfullscreen="" loading="lazy"
+                  referrerpolicy="no-referrer-when-downgrade"></iframe>
               </div>
             </div>
           </div>
@@ -220,7 +244,8 @@
           <h6 class="text-uppercase fw-bold mb-2">Subscribe For Updates</h6>
           <form class="subscribe-form" onsubmit="event.preventDefault();">
             <div class="input-group">
-              <input type="email" class="form-control form-control-sm" placeholder="Your Email Address" aria-label="Email for updates">
+              <input type="email" class="form-control form-control-sm" placeholder="Your Email Address"
+                aria-label="Email for updates">
               <button class="btn btn-warning" type="submit" aria-label="Subscribe">&rarr;</button>
             </div>
           </form>
@@ -253,21 +278,27 @@
           <h6 class="text-uppercase fw-bold mb-3">Get In Touch</h6>
           <ul class="list-unstyled footer-contact">
             <li class="mb-2"><i class="bi bi-geo-alt-fill text-success me-2"></i> P.O. Box 5 - 10203 Kigumo, Kenya</li>
-            <li class="mb-2"><i class="bi bi-telephone-fill text-success me-2"></i> <a href="tel:+254769394273">+254 769 394 273</a></li>
-            <li class="mb-2"><i class="bi bi-envelope-fill text-success me-2"></i> <a href="mailto:info@kigumotvc.ac.ke">info@kigumotvc.ac.ke</a></li>
-            <li class="mb-2"><i class="bi bi-whatsapp text-success me-2"></i> <a href="tel:+254769394273">+254 769 394 273</a></li>
+            <li class="mb-2"><i class="bi bi-telephone-fill text-success me-2"></i> <a href="tel:+254769394273">+254 769
+                394 273</a></li>
+            <li class="mb-2"><i class="bi bi-envelope-fill text-success me-2"></i> <a
+                href="mailto:info@kigumotvc.ac.ke">info@kigumotvc.ac.ke</a></li>
+            <li class="mb-2"><i class="bi bi-whatsapp text-success me-2"></i> <a href="tel:+254769394273">+254 769 394
+                273</a></li>
           </ul>
         </div>
 
         <!-- Other Links -->
-        <div class="col-12 col-lg-3">
+        <div class="col-lg-3">
           <h6 class="text-uppercase fw-bold mb-3">Other Links</h6>
           <ul class="list-unstyled footer-links">
-            <li><a href="#"><i class="bi bi-arrow-right-short"></i> Apply Help Loan</a></li>
-            <li><a href="#"><i class="bi bi-arrow-right-short"></i> KUCCPS</a></li>
+            <li><a href="https://portal.hef.co.ke/auth/signup" target="_blank"><i class="bi bi-arrow-right-short"></i>
+                Apply Help Loan</a></li>
+            <li><a href="https://students.kuccps.net/login/" target="_blank"><i class="bi bi-arrow-right-short"></i>
+                KUCCPS</a></li>
             <li><a href="#"><i class="bi bi-arrow-right-short"></i> Updates</a></li>
             <li><a href="#"><i class="bi bi-arrow-right-short"></i> FAQ</a></li>
-            <li><a href="#"><i class="bi bi-arrow-right-short"></i> Student Portal</a></li>
+            <li><a href="https://intellimis.com/login" target="_blank""><i class=" bi bi-arrow-right-short"></i> Student
+                Portal</a></li>
             <li><a href="#"><i class="bi bi-arrow-right-short"></i> Staff Portal</a></li>
             <li><a href="#"><i class="bi bi-arrow-right-short"></i> Downloads</a></li>
           </ul>
@@ -288,4 +319,5 @@
   </script>
 
 </body>
+
 </html>
